--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_inappwebview: ^5.7.2+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  provider: ^6.0.5
+  url_launcher: ^6.1.14
 dev_dependencies:
   flutter_test:
     sdk: flutter
