--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   url_launcher: ^6.1.14
+  intl: ^0.18.1
+  lottie: ^2.6.0
+  cached_network_image: ^3.1.0
+  photo_view: ^0.14.0
+  supabase_flutter: ^1.10.0
+  json_serializable: ^4.1.3
+  font_awesome_flutter: '>= 4.7.0'
+  get: ^4.6.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,6 +74,8 @@ flutter:
           weight: 700
   assets:
     - images/
+    - animations/
+    - data/books_map.json
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
