--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: darulehsan
-description: A new Flutter project.
+description: Darulehsan books application.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -30,14 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview: ^5.7.2+3
+  #flutter_inappwebview: ^5.7.2+3
   marquee: ^2.2.3
   flutter_swiper_null_safety: ^1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^6.0.5
   url_launcher: ^6.1.14
   intl: ^0.18.1
   lottie: ^2.6.0
@@ -46,7 +45,12 @@ dependencies:
   supabase_flutter: ^1.10.0
   json_serializable: ^4.1.3
   font_awesome_flutter: '>= 4.7.0'
-  get: ^4.6.1
+  http: ^0.13.3
+  youtube_player_flutter: ^8.1.2
+  timeago: ^3.5.0
+  textwrap: ^1.2.0
+  #flutter_expandable_fab: ^2.0.0
+  #get: ^4.6.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
