--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,15 +42,21 @@ dependencies:
   lottie: ^2.6.0
   cached_network_image: ^3.1.0
   photo_view: ^0.14.0
-  supabase_flutter: ^1.10.0
+  supabase_flutter: ^1.10.19
   json_serializable: ^4.1.3
   font_awesome_flutter: '>= 4.7.0'
   http: ^0.13.3
+  flutter_cache_manager: ^3.3.1
   youtube_player_flutter: ^8.1.2
   timeago: ^3.5.0
   textwrap: ^1.2.0
-  #flutter_expandable_fab: ^2.0.0
-  #get: ^4.6.1
+  shared_preferences: ^2.2.1
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  share_plus: ^7.1.0
+  animations: ^2.0.8
+  crypto: ^3.0.3
+  flutter_pdfview: ^1.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -82,6 +88,7 @@ flutter:
     - data/books_map.json
     - animations/
     - data/books_map.json
+    - downloaded/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
