--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  #flutter_inappwebview: ^5.7.2+3
   marquee: ^2.2.3
   flutter_swiper_null_safety: ^1.0.2
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   url_launcher: ^6.1.14
   intl: ^0.18.1
@@ -56,7 +52,16 @@ dependencies:
   share_plus: ^7.1.0
   animations: ^2.0.8
   crypto: ^3.0.3
-  flutter_pdfview: ^1.3.1
+  flutter_staggered_grid_view: ^0.4.0
+  maps_launcher: ^2.2.0
+  package_info_plus: ^4.1.0
+  firebase_messaging: ^14.6.9
+  animated_splash_screen: ^1.3.0
+  page_transition: ^2.1.0
+  animated_text_kit: ^4.2.2
+  draggable_home: ^1.0.5
+  connectivity: ^3.0.6
+  fluttertoast: ^8.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -74,6 +79,9 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   fonts:
+    - family: Nastaliq
+      fonts:
+        - asset: fonts/NotoNastaliqUrdu-Regular.ttf
     - family: AlBayan
       fonts:
         - asset: fonts/AlBayan.ttc
